# cpp-miltech

./: .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: .clangd  apt-packages.in  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/src/: main.cpp  telemetry.cpp
preps/: README.md
